--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:700|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:700&display=swap');
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1,h2,h3,h4 {
