--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,6 +1,28 @@
 @import 'reset';
 @import 'fonts';
 
+.homePage {
+  text-align: center;
+
+  h1 {
+    font-size: 100px;
+    margin-top: 100px;
+    letter-spacing: -6px;
+  }
+
+  h2 {
+    font-size: 25px;
+    margin-top: 30px;
+  }
+
+  button {
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 50px;
+    padding: 20px 40px;
+  }
+}
+
 .roomPage {
   position: absolute;
   top: 0; left: 0;
