--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,9 @@
 @import 'reset';
 @import 'fonts';
+@import 'mixins';
+
+$breakpoint: 'max-width: 750px';
+
 
 .homePage {
   text-align: center;
@@ -59,6 +63,25 @@
   }
 }
 
+// TODO: This is really basic -- do more and better.
+@include responsive($breakpoint) {
+  .roomPage {
+    grid-template-columns: auto;
+
+    .textChat {
+      display: none;
+    }
+
+    .videoChat {
+      .videos {
+        .video {
+          width: 100% !important;
+        }
+      }
+    }
+  }
+}
+
 .roster {
   display: none;
 }
@@ -73,13 +96,15 @@
     background: #fff;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
     border-radius: 15px;
+    height: 670px;
+    max-height: 100vh;
+    max-width: 640px;
     padding: 20px;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     left: 50%;
-    width: 640px;
-    height: 670px;
+    width: 100%;
 
     h2 {
       font-size: 24px;
@@ -87,11 +112,17 @@
     }
 
     .video {
+      width: 100%;
+      height: 0;
+      padding-bottom: 75%;
+      position: relative;
+
       video {
         border-radius: 15px;
-        // TODO: this is dumb and hacky -- revisit after grid video is solved
-        height: #{598 * 3/4}px;
-        width: 598px;
+        width: 100%;
+        position: absolute;
+        width: 100%;
+        height: 100%;
       }
     }
 
