--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'fonts';
 @import 'mixins';
 
-$breakpoint: 'max-width: 750px';
+$breakpoint: 'max-width: 960px';
 
 
 .homePage {
@@ -61,26 +61,17 @@ $breakpoint: 'max-width: 750px';
       border-right: 1px solid #eee;
     }
   }
-}
 
-// TODO: This is really basic -- do more and better.
-@include responsive($breakpoint) {
-  .roomPage {
+  @include responsive($breakpoint) {
     grid-template-columns: auto;
 
     .textChat {
       display: none;
     }
-
-    .videoChat {
-      .videos {
-        .video {
-          width: 100% !important;
-        }
-      }
-    }
   }
 }
+
+
 
 .roster {
   display: none;
@@ -91,6 +82,7 @@ $breakpoint: 'max-width: 750px';
   position: absolute;
   height: 100%;
   width: 100%;
+  z-index: 10;
 
   .inner {
     background: #fff;
@@ -234,30 +226,142 @@ $breakpoint: 'max-width: 750px';
   }
 
   .videos {
-    align-content: center;
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-right: 15px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+    position: relative;
 
     .video {
-      flex-shrink: 0;
-      //height: #{37vw * (3 / 4)};
-      min-width: 200px;
-      padding: 15px 0 0 15px;
-      //width: 37vw;
-      width: 50%;
-
       video {
         border-radius: 15px;
         height: 100%;
+        object-fit: cover;
         width: 100%;
       }
     }
 
-    &.videos-count-1 .video {
-      width: 75%;
+    &.videos-count-1 {
+      .video {
+        grid-area: 1 / 1 / 13 / 13;
+      }
+    }
+
+    &.videos-count-2 {
+      .video:nth-child(1) {
+        grid-area: 1 / 1 / 13 / 13;
+      }
+      .video:nth-child(2) {
+        position: absolute;
+        width: 20vw;
+        height: 20vh;
+
+        min-width: 130px;
+        max-width: 250px;
+
+        min-height: 130px;
+        max-height: 250px;
+
+        left: 20px;
+        bottom: 20px;
+
+        video {
+          box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+        }
+      }
+    }
+
+    &.videos-count-3 {
+      .video:nth-child(1) {
+        grid-area: 1 / 1 / 7 / 7;
+      }
+
+      .video:nth-child(2) {
+        grid-area: 1 / 7 / 7 / 13;
+      }
+
+      .video:nth-child(3) {
+        grid-area: 7 / 4 / 13 / 10;
+      }
+    }
+
+    &.videos-count-4 {
+      .video:nth-child(1) {
+        grid-area: 1 / 1 / 7 / 7;
+      }
+
+      .video:nth-child(2) {
+        grid-area: 1 / 7 / 7 / 13;
+      }
+
+      .video:nth-child(3) {
+        grid-area: 7 / 1 / 13 / 7;
+      }
+
+      .video:nth-child(4) {
+        grid-area: 7 / 7 / 13 / 13;
+      }
+    }
+
+    &.videos-count-5 {
+      .video:nth-child(1) {
+        grid-area: 1 / 1 / 5 / 7;
+      }
+
+      .video:nth-child(2) {
+        grid-area: 1 / 7 / 5 / 13;
+      }
+
+      .video:nth-child(3) {
+        grid-area: 5 / 1 / 9 / 7;
+      }
+
+      .video:nth-child(4) {
+        grid-area: 5 / 7 / 9 / 13;
+      }
+
+      .video:nth-child(5) {
+        grid-area: 9 / 4 / 13 / 10;
+      }
+    }
+
+    &.videos-count-6 {
+      .video:nth-child(1) {
+        grid-area: 1 / 1 / 5 / 7;
+      }
+
+      .video:nth-child(2) {
+        grid-area: 1 / 7 / 5 / 13;
+      }
+
+      .video:nth-child(3) {
+        grid-area: 5 / 1 / 9 / 7;
+      }
+
+      .video:nth-child(4) {
+        grid-area: 5 / 7 / 9 / 13;
+      }
+
+      .video:nth-child(5) {
+        grid-area: 9 / 1 / 13 / 7;
+      }
+
+      .video:nth-child(6) {
+        grid-area: 9 / 7 / 13 / 13;
+      }
+    }
+
+    // 3x3
+    &.videos-count-7,  &.videos-count-8, &.videos-count-9 {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+    }
+
+    // 3x4
+    &.videos-count-10,  &.videos-count-11, &.videos-count-12 {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 1fr);
     }
   }
 
