--- a/styles/app.scss
+++ b/styles/app.scss
@@ -71,14 +71,15 @@ $breakpoint: 'max-width: 960px';
   }
 }
 
-
-
 .roster {
   display: none;
 }
 
 .welcome {
+  align-items: center;
   background: rgba(0,0,0,0.3);
+  display: flex;
+  justify-content: center;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -88,14 +89,8 @@ $breakpoint: 'max-width: 960px';
     background: #fff;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
     border-radius: 15px;
-    height: 670px;
-    max-height: 100vh;
-    max-width: 640px;
+    max-width: 700px;
     padding: 20px;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    left: 50%;
     width: 100%;
 
     h2 {
@@ -103,41 +98,9 @@ $breakpoint: 'max-width: 960px';
       margin-bottom: 15px;
     }
 
-    .video {
-      width: 100%;
-      height: 0;
-      padding-bottom: 75%;
-      position: relative;
-      transform: scaleX(-1);
-
-      video {
-        border-radius: 15px;
-        width: 100%;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
-    }
-
     h3 {
       font-size: 20px;
       margin: 15px 0;
-    }
-
-    input {
-      border: 0;
-      border-bottom: 1px solid #ddd;
-      font-size: 20px;
-    }
-
-    button {
-      background: #eee;
-      border: 0;
-      border-radius: 10px;
-      margin-top: 15px;
-
-      font-size: 20px;
-      padding: 10px 20px;
     }
   }
 }
@@ -395,6 +358,88 @@ $breakpoint: 'max-width: 960px';
       }
     }
   }
+}
 
+.settings {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  width: 100%;
+
+  .loading {
+    grid-column: 1 / 3;
+    height: 100px;
+    min-width: 400px;
+    width: 100%;
+
+    h3 {
+      font-size: 16px;
+      margin-bottom: 5px;
+      margin-top: 0;
+    }
+
+    h4 {
+      color: #999;
+      font-size: 14px;
+    }
+  }
+
+  .video {
+    width: 100%;
+    padding-bottom: 75%;
+    position: relative;
+
+    video {
+      border-radius: 15px;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      width: 100%;
+    }
+  }
+
+  label {
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 2px;
+  }
+
+  select, input {
+    background: #fff;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 100%;
+  }
+
+  .buttonContainer {
+    grid-area: 2 / 2 / 3 / 3;
+    justify-self: end;
+
+    button {
+      background-color: #eee;
+      border-radius: 5px;
+      border: 1px solid #999;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 10px 20px;
+    }
+  }
+
+  @include responsive($breakpoint) {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+
+    .video {
+      padding-bottom: 40vh;
+    }
+
+    .buttonContainer {
+      grid-area: unset;
+    }
+  }
 }
 
