Initial jistsi chat integration.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -137,7 +137,7 @@ $breakpoint: 'max-width: 960px';
         margin-left: 10px;
       }
 
-      .body {
+      .text {
         background: #fff;
         border-radius: 18px;
         font-size: 13px;
