--- a/styles/app.scss
+++ b/styles/app.scss
@@ -24,6 +24,12 @@ $breakpoint: 'max-width: 960px';
     margin-top: 50px;
     padding: 20px 40px;
   }
+
+  .temporary {
+    color: #888;
+    font-size: 14px;
+    margin-top: 50px;
+  }
 }
 
 .roomPage {
