--- a/styles/app.scss
+++ b/styles/app.scss
@@ -44,7 +44,7 @@ $breakpoint: 'max-width: 960px';
   .videoChat, .textChat {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 60px auto 60px;
+    grid-template-rows: 70px auto 70px;
     overflow: auto; // this hack makes children scrollable
 
     > header {
@@ -52,7 +52,7 @@ $breakpoint: 'max-width: 960px';
     }
 
     // TODO: Clean this up. section tag plan broken by ScrollToBottom component.
-    > section, .messages {
+    > section {
       overflow-y: auto;
     }
 
@@ -67,13 +67,13 @@ $breakpoint: 'max-width: 960px';
     }
   }
 
-  @include responsive($breakpoint) {
+  //@include responsive($breakpoint) {
     grid-template-columns: auto;
 
     .textChat {
       display: none;
     }
-  }
+  //}
 }
 
 .roster {
@@ -395,16 +395,56 @@ $breakpoint: 'max-width: 960px';
   .controls {
     display: flex;
 
+    > * {
+      display: flex;
+    }
+
+    .left {
+      justify-content: flex-start;
+    }
+
+    .center {
+      align-items: center;
+      flex-grow: 1;
+      justify-content: center;
+
+      .button {
+        border: 1px solid #ccc;
+        border-radius: 100%;
+        height: 50px;
+        width: 50px;
+      }
+
+      .leaveButton {
+        margin: 0 8px 0 8px;
+
+        svg {
+          color: red;
+        }
+
+        &:hover {
+          border-color: red;
+          background: red;
+
+          svg {
+            color: #fff;
+          }
+        }
+      }
+    }
+
+    .right {
+      justify-content: flex-end;
+    }
+
     .button {
       align-items: center;
-      border-right: 1px solid #eee;
-      color: #222;
+      color: #555;
       cursor: default;
       display: flex;
+      flex-direction: column;
       font-size: 14px;
-      height: 100%;
       justify-content: center;
-      width: 100px;
 
       &:hover {
         background: #f6f6f6;
@@ -416,7 +456,34 @@ $breakpoint: 'max-width: 960px';
 
       svg {
         color: #999;
-        margin-right: 8px;
+        font-size: 18px;
+      }
+    }
+
+    .left, .right {
+      width: 150px;
+      flex-shrink: 0;
+
+      .button {
+        height: 100%;
+        padding: 0 20px;
+
+        .label {
+          display: block;
+          margin-top: 8px;
+        }
+
+        svg {
+          font-size: 16px;
+        }
+
+        &.screenShareButton {
+          width: 125px;
+        }
+
+        &.textChatButton {
+          width: 110px;
+        }
       }
     }
   }
