--- a/styles/app.scss
+++ b/styles/app.scss
@@ -41,7 +41,7 @@ $breakpoint: 'max-width: 960px';
   grid-template-columns: auto;
   grid-template-rows: auto;
 
-  &.chatShown {
+  &.showChat {
     grid-template-columns: auto 300px;
 
     .textChat {
@@ -53,12 +53,15 @@ $breakpoint: 'max-width: 960px';
     position: relative;
 
     > header, > footer {
-      background-color: transparentize($color: #fff, $amount: 0.02);
+      background-color: rgba(255,255,255, 0.98);
       height: 70px;
       position: absolute;
-      transition: background-color 250ms, opacity 250ms, color 250ms, text-shadow 250ms;
       width: 100%;
       z-index: 10;
+
+      &, & * {
+        transition: background-color 250ms, opacity 250ms, color 250ms, text-shadow 250ms;
+      }
     }
 
     > header {
@@ -83,12 +86,32 @@ $breakpoint: 'max-width: 960px';
 
         h1 {
           color: #fff;
-          text-shadow: 0 0 5px rgba(0,0,0,0.4);
+          text-shadow: 0 0 5px rgba(0,0,0,0.6);
+          opacity: 0.9;
         }
       }
 
       > footer {
-        opacity: 0;
+        background-color: transparent;
+        border-color: transparent;
+
+        .left {
+          opacity: 0;
+        }
+
+        .center {
+          opacity: 0;
+        }
+
+        .right {
+          .textChatButton {
+            opacity: 0;
+
+            &.hasHiddenMessages {
+              opacity: 1;
+            }
+          }
+        }
       }
     }
   }
