--- a/styles/app.scss
+++ b/styles/app.scss
@@ -71,6 +71,10 @@ $breakpoint: 'max-width: 960px';
     > section {
       height: 100vh;
       width: 100%;
+
+      &.videos-count-2 .video:nth-child(2) {
+        top: 70px !important;
+      }
     }
 
     > footer {
@@ -88,6 +92,12 @@ $breakpoint: 'max-width: 960px';
           color: #fff;
           text-shadow: 0 0 5px rgba(0,0,0,0.6);
           opacity: 0.9;
+        }
+      }
+
+      > section {
+        &.videos-count-2 .video:nth-child(2) {
+          top: 0 !important;
         }
       }
 
@@ -358,16 +368,18 @@ $breakpoint: 'max-width: 960px';
 
     &.videos-count-2 {
       display: block;
+      border: 1px solid rgba(0,0,0,0.1);
+      border-width: 0 0 1px 1px;
 
       .video:nth-child(2) {
         position: absolute;
-        height: 150px;
-        width: 150px;
-        left: 20px;
-        bottom: 20px;
+        max-height: 200px;
+        max-width: 200px;
+        top: 0;
+        right: 0;
 
         video {
-          box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+          object-fit: contain;
         }
       }
     }
