--- a/styles/app.scss
+++ b/styles/app.scss
@@ -32,6 +32,26 @@ $breakpoint: 'max-width: 960px';
   }
 }
 
+.modal {
+  align-items: center;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 20;
+
+  .modalInner {
+    background: #fff;
+    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
+    border-radius: 15px;
+    max-width: 700px;
+    padding: 20px;
+    width: 100%;
+  }
+}
+
 .roomPage {
   position: absolute;
   top: 0; left: 0;
