--- a/styles/app.scss
+++ b/styles/app.scss
@@ -750,3 +750,8 @@ $transparent-white: rgba(255,255,255, 0.97);
     font-size: 14px;
   }
 }
+
+// .videos get stashed here until they start or if they end unexpectedly
+.disabledVideos {
+  display: none;
+}
