--- a/styles/app.scss
+++ b/styles/app.scss
@@ -311,6 +311,8 @@ $transparent-white: rgba(255,255,255, 0.97);
 }
 
 .videoChat {
+  overflow: hidden;
+
   header {
     align-items: center;
     display: flex;
@@ -331,204 +333,238 @@ $transparent-white: rgba(255,255,255, 0.97);
   }
 
   .videos {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    grid-gap: 2px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    // display: grid;
+    // grid-template-columns: repeat(12, 1fr);
+    // grid-template-rows: repeat(12, 1fr);
+    // grid-gap: 2px;
     padding: 0;
     position: relative;
 
-    .video {
-      overflow: hidden;
-      position: relative;
+    .grid {
+      display: flex;
+      flex-direction: column;
 
-      &.videoMuted {
-        background: #555;
+      .row {
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
 
-        .fa-video-slash {
-          font-size: 36px;
-          color: #fff;
-          left: 50%;
-          position: absolute;
-          top: 50%;
-          transform: translate(-50%, -50%);
-        }
+        .video {
+          height: var(--video-height);
+          width: var(--video-width);
 
-        video {
-          display: none;
-        }
-      }
-
-      &.audioMuted {
-        .fa-microphone-slash {
-          color: #fff;
-          bottom: 20px;
-          position: absolute;
-          right: 20px;
+          video {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+          }
         }
       }
 
-      video {
-        height: 100%;
-        width: 100%;
-      }
-
-      &.cameraVideoType {
-        &.local video {
-          transform: scaleX(-1);
-        }
-
-        &.coverVideo video {
-          object-fit: cover;
-        }
-
-        &.containVideo video {
-          object-fit: contain;
-        }
-      }
+      // 2x3 = (16 + 16) / (9 + 9)
+      // @include responsive('min-aspect-ratio: 32/18') {
+      //   .row {
+      //     video {
+      //       width: calc(50vh * (16/9));
+      //     }
+      //   }
+      // }
     }
 
-    &.videos-count-3-or-more {
-      .dominantSpeaker {
-        border: 1px solid blue;
-      }
-    }
+    // .video {
+    //   overflow: hidden;
+    //   position: relative;
 
-    // Grids and absolute positioning don't mix
-    &.videos-count-1, &.videos-count-2 {
-      display: block;
+    //   &.videoMuted {
+    //     background: #555;
 
-      .video:nth-child(1) {
-        width: 100%;
-        height: 100%;
-      }
-    }
+    //     .fa-video-slash {
+    //       font-size: 36px;
+    //       color: #fff;
+    //       left: 50%;
+    //       position: absolute;
+    //       top: 50%;
+    //       transform: translate(-50%, -50%);
+    //     }
 
-    &.videos-count-2 {
-      display: block;
+    //     video {
+    //       display: none;
+    //     }
+    //   }
 
-      .video:nth-child(2) {
-        position: absolute;
-        top: 70px;
-        right: 0;
+    //   &.audioMuted {
+    //     .fa-microphone-slash {
+    //       color: #fff;
+    //       bottom: 20px;
+    //       position: absolute;
+    //       right: 20px;
+    //     }
+    //   }
 
-        video {
-          height: auto;
-          max-height: 150px;
-          width: auto;
-        }
-      }
-    }
+    //   video {
+    //     height: 100%;
+    //     width: 100%;
+    //   }
 
-    &.videos-count-3 {
-      .video:nth-child(1) {
-        grid-area: 1 / 1 / 7 / 7;
-      }
+    //   &.cameraVideoType {
+    //     &.local video {
+    //       transform: scaleX(-1);
+    //     }
 
-      .video:nth-child(2) {
-        grid-area: 1 / 7 / 7 / 13;
-      }
+    //     &.coverVideo video {
+    //       object-fit: cover;
+    //     }
 
-      .video:nth-child(3) {
-        grid-area: 7 / 4 / 13 / 10;
-      }
-    }
+    //     &.containVideo video {
+    //       object-fit: contain;
+    //     }
+    //   }
+    // }
 
-    &.videos-count-4 {
-      .video:nth-child(1) {
-        grid-area: 1 / 1 / 7 / 7;
-      }
+    // &.videos-count-3-or-more {
+    //   .dominantSpeaker {
+    //     border: 1px solid blue;
+    //   }
+    // }
 
-      .video:nth-child(2) {
-        grid-area: 1 / 7 / 7 / 13;
-      }
+    // // Grids and absolute positioning don't mix
+    // &.videos-count-1, &.videos-count-2 {
+    //   display: block;
 
-      .video:nth-child(3) {
-        grid-area: 7 / 1 / 13 / 7;
-      }
+    //   .video:nth-child(1) {
+    //     width: 100%;
+    //     height: 100%;
+    //   }
+    // }
 
-      .video:nth-child(4) {
-        grid-area: 7 / 7 / 13 / 13;
-      }
-    }
+    // &.videos-count-2 {
+    //   display: block;
 
-    &.videos-count-5 {
-      .video:nth-child(1) {
-        grid-area: 1 / 1 / 5 / 7;
-      }
+    //   .video:nth-child(2) {
+    //     position: absolute;
+    //     top: 70px;
+    //     right: 0;
 
-      .video:nth-child(2) {
-        grid-area: 1 / 7 / 5 / 13;
-      }
+    //     video {
+    //       height: auto;
+    //       max-height: 150px;
+    //       width: auto;
+    //     }
+    //   }
+    // }
 
-      .video:nth-child(3) {
-        grid-area: 5 / 1 / 9 / 7;
-      }
+    // &.videos-count-3 {
+    //   .video:nth-child(1) {
+    //     grid-area: 1 / 1 / 7 / 7;
+    //   }
 
-      .video:nth-child(4) {
-        grid-area: 5 / 7 / 9 / 13;
-      }
+    //   .video:nth-child(2) {
+    //     grid-area: 1 / 7 / 7 / 13;
+    //   }
 
-      .video:nth-child(5) {
-        grid-area: 9 / 4 / 13 / 10;
-      }
-    }
+    //   .video:nth-child(3) {
+    //     grid-area: 7 / 4 / 13 / 10;
+    //   }
+    // }
 
-    &.videos-count-6 {
-      .video:nth-child(1) {
-        grid-area: 1 / 1 / 5 / 7;
-      }
+    // &.videos-count-4 {
+    //   .video:nth-child(1) {
+    //     grid-area: 1 / 1 / 7 / 7;
+    //   }
 
-      .video:nth-child(2) {
-        grid-area: 1 / 7 / 5 / 13;
-      }
+    //   .video:nth-child(2) {
+    //     grid-area: 1 / 7 / 7 / 13;
+    //   }
 
-      .video:nth-child(3) {
-        grid-area: 5 / 1 / 9 / 7;
-      }
+    //   .video:nth-child(3) {
+    //     grid-area: 7 / 1 / 13 / 7;
+    //   }
 
-      .video:nth-child(4) {
-        grid-area: 5 / 7 / 9 / 13;
-      }
+    //   .video:nth-child(4) {
+    //     grid-area: 7 / 7 / 13 / 13;
+    //   }
+    // }
 
-      .video:nth-child(5) {
-        grid-area: 9 / 1 / 13 / 7;
-      }
+    // &.videos-count-5 {
+    //   .video:nth-child(1) {
+    //     grid-area: 1 / 1 / 5 / 7;
+    //   }
 
-      .video:nth-child(6) {
-        grid-area: 9 / 7 / 13 / 13;
-      }
-    }
+    //   .video:nth-child(2) {
+    //     grid-area: 1 / 7 / 5 / 13;
+    //   }
 
-    // 3x3
-    &.videos-count-7,  &.videos-count-8, &.videos-count-9 {
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-    }
+    //   .video:nth-child(3) {
+    //     grid-area: 5 / 1 / 9 / 7;
+    //   }
 
-    // 3x4
-    &.videos-count-10,  &.videos-count-11, &.videos-count-12 {
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-    }
+    //   .video:nth-child(4) {
+    //     grid-area: 5 / 7 / 9 / 13;
+    //   }
 
-    // 4x4
-    &.videos-count-13,  &.videos-count-14, &.videos-count-15, &.videos-count-16 {
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-    }
+    //   .video:nth-child(5) {
+    //     grid-area: 9 / 4 / 13 / 10;
+    //   }
+    // }
 
-    // 4x5
-    &.videos-count-17,  &.videos-count-18, &.videos-count-19, &.videos-count-20 {
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-    }
+    // &.videos-count-6 {
+    //   .video:nth-child(1) {
+    //     grid-area: 1 / 1 / 5 / 7;
+    //   }
 
-    // 5x5
-    &.videos-count-21,  &.videos-count-22, &.videos-count-23, &.videos-count-24, &.videos-count-25 {
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: repeat(5, 1fr);
-    }
+    //   .video:nth-child(2) {
+    //     grid-area: 1 / 7 / 5 / 13;
+    //   }
+
+    //   .video:nth-child(3) {
+    //     grid-area: 5 / 1 / 9 / 7;
+    //   }
+
+    //   .video:nth-child(4) {
+    //     grid-area: 5 / 7 / 9 / 13;
+    //   }
+
+    //   .video:nth-child(5) {
+    //     grid-area: 9 / 1 / 13 / 7;
+    //   }
+
+    //   .video:nth-child(6) {
+    //     grid-area: 9 / 7 / 13 / 13;
+    //   }
+    // }
+
+    // // 3x3
+    // &.videos-count-7,  &.videos-count-8, &.videos-count-9 {
+    //   grid-template-columns: repeat(3, 1fr);
+    //   grid-template-rows: repeat(3, 1fr);
+    // }
+
+    // // 3x4
+    // &.videos-count-10,  &.videos-count-11, &.videos-count-12 {
+    //   grid-template-columns: repeat(3, 1fr);
+    //   grid-template-rows: repeat(4, 1fr);
+    // }
+
+    // // 4x4
+    // &.videos-count-13,  &.videos-count-14, &.videos-count-15, &.videos-count-16 {
+    //   grid-template-columns: repeat(4, 1fr);
+    //   grid-template-rows: repeat(4, 1fr);
+    // }
+
+    // // 4x5
+    // &.videos-count-17,  &.videos-count-18, &.videos-count-19, &.videos-count-20 {
+    //   grid-template-columns: repeat(4, 1fr);
+    //   grid-template-rows: repeat(4, 1fr);
+    // }
+
+    // // 5x5
+    // &.videos-count-21,  &.videos-count-22, &.videos-count-23, &.videos-count-24, &.videos-count-25 {
+    //   grid-template-columns: repeat(5, 1fr);
+    //   grid-template-rows: repeat(5, 1fr);
+    // }
   }
 
   .controls {
